2013-10-15  Tim Shen  <timshen91@gmail.com>

PR libstdc++/58737
	* include/bits/regex_automaton.h (_Automaton<>::~_Automaton): Fix memory
	leak by adding it.
	* include/bits/regex_executor.h (_Executor<>::~_Executor): Likewise.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@203610 138bc75d-0d04-0410-961f-82ee72b054a4